# cebook

./: #Makefile.am#  Makefile  Makefile.am~  Makefile.in  README.md  config.h  config.status  configure  configure.ac  configure.lineno  mantan
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/: #C-latihan.org#  .#C-latihan.org  C-latihan.org
src/: Cebook.c  Cebook.c~  Makefile  Makefile.am  Makefile.am~  Makefile.in  PointerAndArrays.c  cebook  chapter4.c  chapter4.c~  client.c  client.h  conf.h  global.h  global.h~  mantap_simple.c  pthred2.c  test.c  test.c~
src/.deps/: Cebook.Po  chapter4.Po  client.Po  test.Po
